CHANGES
*******

0.10 (unreleased)
=================

* Update test dependencies to newer version of jQuery and jQuery-ui.
  These are also used by the demo code. Made it so that the version
  number of dependencies not in the URL anymore, so that it's easier
  to update in the future.

0.9.1 (2011-01-03)
==================

* Include form demo in documentation.

0.9 (2011-01-02)
================

Initial public release.