@@ -172,6 +172,27 @@ The steps taken are:
 View lookup
 -----------
 
+.. sidebar:: ifaces versus iface on the model
+
+  In our examples, the model property name is ``ifaces`` and an array,
+  while the view property name is ``iface`` and a string. The idea is that a model
+  may have more descriptions of what the data is, but a view only
+  knows how to render one type of data. 
+
+  In most cases however your models will only have a single iface. It
+  can be cumbersome or error prone to always have to remember to use
+  ``ifaces`` and an array for models. So Obviel understands a few
+  alternatives:
+
+  * give your model object a single ``iface`` property with the iface
+    as a string.
+
+  * continue to use ``ifaces`` as the property name but use a string,
+    not an array, to assign a single iface.
+
+  It is an error however to supply a model object with both an ``iface`` *and*
+  an ``ifaces`` property.
+
 Dynamic view lookup is what allows loose coupling between client and
 server. The primary mechanism of lookup is by the ``iface`` marker on
 the model. A model can declare with an iface what kind of model it is,
@@ -268,12 +289,6 @@ default the name is ``default``.
 The iface declaration for a view is optional too, though you should
 usually provide it. If you leave out an iface in a view registration
 you register a fallback view for all objects.
-
-Note that the model property name is ``ifaces`` while the view
-property name is ``iface``. The idea is that a model may have more
-descriptions of what the data is, but a view only knows how to render
-one type of data. (but may be a cause of errors that is easy to
-overlook, so we're looking into changing this)
 
 Properties available on views
 -----------------------------
